# ktl_dbt

./: MANIFEST.in  README.md  pyproject.toml  setup.py
ktl_dbt/: autovault.py  cli.py  erd_docs.py
ktl_dbt/dbt/adapters/spark/: __init__.py  connections_custom.py  impl_custom.py  python_submissions_custom.py
ktl_dbt/dbt/include/global_project/macros/autovault/erd/: render_dv_erd_docs.sql
ktl_dbt/dbt/include/spark/: profile_template.yml
